Table users {
  id integer [primary key, increment]
  username text [not null]
  email text [not null, unique]
  password text [default: '123456']
  role varchar [default: 'user', note: 'admin/user']
  photo text [note: 'link to photo']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp

  indexes {
    (email, password) [name: 'login']
    (username) [name: 'name']
    (email) [unique, name: 'unique_email']
  }
}

Table skins {
  id integer [primary key, increment]
  user_id integer [not null, note: 'Criador da skin']
  name text [not null]
  image_url text [not null, note: 'URL da imagem da skin']
  description text
  species_class varchar [not null, note: 'vmp, wiz, lbw, kni, cen']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp

  indexes {
    (name) [name: 'skin_name_index']
    (species_class) [name: 'class_filter']
  }
}

Table favorites {
  id integer [primary key, increment]
  user_id integer [not null]
  skin_id integer [not null]
  favorited_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, skin_id) [unique, name: 'unique_favorite']
  }
}

Ref: skins.user_id > users.id
Ref: favorites.user_id > users.id
Ref: favorites.skin_id > skins.id
